Made uncompressed build

--- a/Index.html
+++ b/Index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Gamebus Gamebus Final Build (plugin broken).loader.js";
       var config = {
-        dataUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).data.br",
-        frameworkUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).framework.js.br",
-        codeUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).wasm.br",
+        dataUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).data",
+        frameworkUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).framework.js",
+        codeUrl: buildUrl + "/Gamebus Gamebus Final Build (plugin broken).wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Spellborne",
